<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
            android:id="@+id/goal_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_description"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/goal_display_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/goal_description"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/goal_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_course"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_description"
    />

    <TextView
            android:id="@+id/goal_display_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/goal_course"
            app:layout_constraintTop_toBottomOf="@id/goal_display_description"
    />

    <TextView
            android:id="@+id/goal_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_deadline"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_course"
    />

    <TextView
            android:id="@+id/goal_display_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/goal_deadline"
            app:layout_constraintTop_toBottomOf="@id/goal_display_course"
    />

    <TextView
            android:id="@+id/goal_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_task"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goal_deadline"
    />

    <TextView
            android:id="@+id/goal_display_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/goal_task"
            app:layout_constraintTop_toBottomOf="@id/goal_display_deadline"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
