<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
>

    <TextView
            android:id="@+id/create_item"
            android:text="@string/new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/enter_item_name"
            android:text="@string/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/input_name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/create_item"
    />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/input_name"
            android:maxWidth="300dp"
            app:layout_constraintTop_toBottomOf="@id/create_item"
            app:layout_constraintStart_toEndOf="@id/enter_item_name"
            android:minHeight="48dp"/>

    <TextView
            android:id="@+id/enter_type"
            android:text="@string/enter_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/create_item"
            app:layout_constraintBottom_toBottomOf="@+id/input_name"
            app:layout_constraintStart_toEndOf="@+id/deadline_button"
            android:layout_marginStart="30dp"
    />

    <Spinner
            android:id="@+id/types_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/create_item"
            app:layout_constraintBottom_toBottomOf="@+id/input_name"
            app:layout_constraintStart_toEndOf="@+id/enter_type"
            android:minHeight="48dp"/>

    <TextView
            android:id="@+id/enter_deadline"
            android:text="@string/enter_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/deadline_button"
            app:layout_constraintBottom_toBottomOf="@id/deadline_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
    />

    <TextView
            android:id="@+id/enter_weight"
            android:text="@string/enter_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/enter_type"
            app:layout_constraintBottom_toBottomOf="@id/deadline_button"
            app:layout_constraintTop_toTopOf="@id/deadline_button"

    />

    <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:id="@+id/input_weight"
            android:textSize="24sp"
            android:maxWidth="300dp"
            app:layout_constraintStart_toEndOf="@id/enter_weight"
            app:layout_constraintTop_toBottomOf="@id/input_name"
            android:minHeight="48dp"
    />

    <TextView
            android:id="@+id/percentage"
            android:text="%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/input_weight"
            app:layout_constraintBottom_toBottomOf="@id/input_weight"
            app:layout_constraintTop_toTopOf="@id/input_weight"
    />
    <Button

            android:text="Deadline"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:id="@+id/deadline_button"
            app:layout_constraintStart_toEndOf="@id/enter_deadline"
            app:layout_constraintTop_toBottomOf="@id/input_name"
            app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>