<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
            android:id="@+id/choose_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_choose_course"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/goals_course_spinner"
            app:layout_constraintBottom_toBottomOf="@id/goals_course_spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
    />

    <Spinner
            android:id="@+id/goals_course_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/choose_course"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/choose_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_choose_task"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/goals_task_spinner"
            app:layout_constraintBottom_toBottomOf="@id/goals_task_spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
    />

    <Spinner
            android:id="@+id/goals_task_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/choose_task"
            app:layout_constraintTop_toBottomOf="@id/goals_course_spinner"
            android:layout_marginTop="10dp"
    />


    <TextView
            android:id="@+id/choose_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_choose_deadline"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/deadline_button"
            app:layout_constraintBottom_toBottomOf="@id/deadline_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
    />

    <Button
            android:id="@+id/deadline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deadline: "
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/goals_task_spinner"
            app:layout_constraintStart_toEndOf="@id/choose_deadline"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
    />
    
    
    <TextView
            android:id="@+id/enter_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_enter_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/input_description"
            app:layout_constraintBottom_toBottomOf="@id/input_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
    />
    
    <EditText
            android:id="@+id/input_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Optional"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/deadline_button"
            app:layout_constraintStart_toEndOf="@id/enter_description"
            android:layout_marginTop="10dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>