<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
            android:id="@+id/choose_course"
            android:text="@string/task_choose_course"
            android:textSize="18sp"
            android:textColor="@color/dialog_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tasks_course_spinner"
            app:layout_constraintBottom_toBottomOf="@id/tasks_course_spinner"
            android:layout_marginStart="20dp"
    />

    <Spinner
            android:id="@+id/tasks_course_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/choose_course"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/choose_course"
    />

    <TextView
            android:id="@+id/enter_description"
            android:text="@string/task_enter_description"
            android:textSize="18sp"
            android:textColor="@color/dialog_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_course"
            app:layout_constraintBottom_toTopOf="@id/input_description"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
    />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="Description"
        android:textSize="16sp"
        android:textColor="@color/button_text_color"
        app:layout_constraintStart_toStartOf="@id/enter_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_description"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:minHeight="90dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:overScrollMode="ifContentScrolls"
        android:background="@drawable/tasks_edit_text_background"
        />


    <TextView
            android:id="@+id/enter_priority"
            android:text="@string/task_enter_priority"
            android:textSize="18sp"
            android:textColor="@color/dialog_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_description"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
    />

    <Spinner
            android:id="@+id/tasks_priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/enter_priority"
            app:layout_constraintTop_toTopOf="@id/enter_priority"
            app:layout_constraintBottom_toBottomOf="@id/enter_priority"
    />
</androidx.constraintlayout.widget.ConstraintLayout>