<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="105sp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp"
    android:layout_margin="8dp"
    cardView:cardBackgroundColor="@color/recycler_item_bg"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
    >
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10sp"
        />

        <TextView
                android:id="@+id/display_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/recycler_item_text"
                android:paddingTop="10sp"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/enter_type"
                android:text="@string/enter_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/recycler_item_text"
                android:paddingTop="5sp"
                app:layout_constraintTop_toBottomOf="@id/display_item_name"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
        />

        <TextView
                android:id="@+id/display_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="5dp"
                android:paddingTop="5sp"
                android:textColor="@color/recycler_item_text"
                app:layout_constraintTop_toTopOf="@id/enter_type"
                app:layout_constraintStart_toEndOf="@id/enter_type"
                app:layout_editor_absoluteX="300dp"
        />

        <TextView
                android:id="@+id/enter_weight"
                android:text="@string/enter_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/recycler_item_text"
                android:paddingTop="5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/enter_type"
                android:layout_marginEnd="80sp"
        />

        <TextView
                android:id="@+id/display_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/recycler_item_text"
                app:layout_constraintStart_toEndOf="@id/enter_deadline"
                app:layout_constraintTop_toTopOf="@id/enter_deadline"
                app:layout_constraintBottom_toBottomOf="@id/enter_deadline"
                android:paddingStart="5dp"
                android:paddingTop="5sp"
                android:paddingBottom="10sp"
        />

        <TextView
                android:id="@+id/enter_deadline"
                android:text="@string/enter_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/recycler_item_text"
                android:paddingBottom="10sp"
                android:paddingTop="5sp"
                app:layout_constraintStart_toStartOf="@id/enter_type"
                app:layout_constraintTop_toBottomOf="@id/enter_type"
        />

        <TextView
                android:id="@+id/display_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="5dp"
                android:paddingTop="5sp"
                android:textColor="@color/recycler_item_text"
                app:layout_constraintTop_toTopOf="@id/enter_weight"
                app:layout_constraintStart_toEndOf="@id/enter_weight"
               />

        <TextView
                android:id="@+id/percentage"
                android:text="%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/recycler_item_text"
                android:paddingTop="5sp"
                app:layout_constraintStart_toEndOf="@id/display_weight"
                app:layout_constraintBottom_toBottomOf="@id/display_weight"
                app:layout_constraintTop_toTopOf="@id/display_weight"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>